# dev-configs

./: .gitattributes  AUTHORS  CHANGELOG  CHANGELOG.md  CONTRIBUTING.md  COPYRIGHT  INSTALL.md  LICENSE  README.md  TODO
guidelines/: code-style-python.md  code-style.py.md  docstring.py  documentation-style-guide.md  git-commands.md  git-commit.md  git-workflow.md  promts.md  python-installation.md  script.py
guidelines/openai/: GPT5_1-Prompting-Guide.md
guidelines/projects/: docstring.py
new-repo/: CHANGELOG  CHANGELOG.md  CONTRIBUTING.md  COPYRIGHT  INSTALL.md  INSTALLATION.md  LICENSE  README.md  pyproject.toml
new-repo/tests/: README.md  TESTING.md  _list.sh
promts/: code-style-python.md  documentation-and-refactor.md  documentation-and-refactor.txt  git-commits.txt  git_commit_assistant.md  python-code.txt  python_code_style_assistant.md
scripts/: copy_files.py
settings/: .editorconfig
settings/Sublime_Text/: Preferences.sublime-settings
settings/VS_Code/: keybindings.json  settings.json
