[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "project"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = { paths = ["LICENSE"] }

authors = [
  { name = "Anna Burova", email = "burova.anna+git@gmail.com" }
]

dependencies = [
]

keywords = [
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
test = [
  "pytest>=9.0.0",
]

[project.urls]
homepage = "https://github.com/AnnaBurova/dev-project"
repository = "https://github.com/AnnaBurova/dev-project"
issues = "https://github.com/AnnaBurova/dev-project/issues"
changelog = "https://github.com/AnnaBurova/dev-project/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["project"]
only-packages = true

[tool.hatch.build.targets.sdist]
only-include = [
]
exclude = [
]
